corrigido bug no contraste
no modo luz da pagina quando ligado o modo contrastes os links n aplicavam o underline com o hover do js, corrigido.

--- a/assets/css/contrast.css
+++ b/assets/css/contrast.css
@@ -33,6 +33,9 @@
 .contrast a{
     color: yellow !important;
 }
+.contrast a:hover{
+    text-decoration: underline yellow !important;
+}
 
 .contrast button,
 .contrast input[type=button],
